fixed header z-index issues with the body, and did basic style

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -5,5 +5,13 @@
     --secondary-text-color: #cecece;
     --border-radius: 8px;
     --speed: 500ms;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    padding-top: 50px;
+    margin: 0;
 }
 
