--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,19 +1,32 @@
-nav ul  {
+nav {
+    background-color: aqua;
+    width: 100vw;
+    top: 0;
+    position: fixed;
+    z-index: 1;
+}
+
+nav ul {
     /*  */
     list-style: none;
     margin: 0;
-    padding: 0;
-    
+    padding: 10px;
+    overflow: hidden;
+
 }
 
 ul {
 
     list-style: none;
+    overflow: hidden;
+
 }
 
-li{
-   margin: 10px;
-   
+li {
+    margin: 10px;
+    display: inline;
+    float: right;
+
 }
 
 a {
@@ -25,17 +38,18 @@ a {
     position: relative;
     overflow: hidden;
     cursor: pointer;
-    
+
 }
 
 .dropdown-menu {
     position: absolute;
-    top: 100px;
-    right: 20px;
-    background-color: #fff;
-    border-radius: var(--border-radius);
-    padding: 10px 20px;
-    width: 200px;
+    right: 40px;
+    background-color: grey;
+    border-radius: solid rgb(79, 79, 79);
+    padding: 5px 10px;
+    width: 100px;
+    
+    z-index: 3;
 }
 
 .dropdown-menu::before {
@@ -54,25 +68,25 @@ a {
     border-top: 1px solid rgba(0, 0, 0, 0.05);
 }
 
-.dropdown-menu ul li:hover a{
-color: red;
-cursor:pointer;
+.dropdown-menu ul li:hover a {
+    color: red;
+    cursor: pointer;
 
 }
 
-.dropdownItem{
+.dropdownItem {
     display: flex;
-    margin:10px auto;
+    margin: 10px auto;
 
 }
 
-.dropdownItem a{
+.dropdownItem a {
     max-width: 100px;
     margin-left: 10px;
     transition: var(--speed);
 }
 
-.dropdown-menu.active  {
+.dropdown-menu.active {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
